--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: group_chat_app
-description: A new Flutter project.
+name: brekete_connect
+description: Brekete Family Connect App.
 
-version: 1.1.1+29
+version: 1.1.2+30
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -36,6 +36,9 @@ dependencies:
   timeago: ^3.1.0
   carousel_slider: ^4.0.0
   open_file: ^3.2.1
+  flowder: ^0.2.0
+  #percent_indicator: ^4.2.1
+  percent_indicator: ^3.4.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.2
