--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tmktechnologies.bereketeconnect">
    <application
-        android:label="bereketeconnectapp"
+        android:label="Brekete Connect"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
