--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,24 +46,24 @@ dependencies:
   #Just added packages   --BEGIN--
   json_annotation: ^4.0.0
   day_night_switcher: ^0.2.0+1
-  provider: ^5.0.0
-  cupertino_icons: ^1.0.2
-  font_awesome_flutter: ^9.0.0
+  #provider: ^5.0.0
+  #cupertino_icons: ^1.0.2
+  #font_awesome_flutter: ^9.0.0
   google_fonts: ^2.0.0
   rxdart: ^0.26.0
   another_flushbar: ^1.10.20
-  cached_network_image: ^3.0.0
+  #cached_network_image: ^3.0.0
   connectivity: ^3.0.6
-  image_picker: ^0.7.5+2
+  #image_picker: ^0.7.5+2
   page_transition: ^2.0.2
-  timeago: ^3.0.2
+  #timeago: ^3.0.2
   file_picker: ^4.0.0
-  percent_indicator: ^3.0.1
-  shared_preferences: ^2.0.5
+  #percent_indicator: ^3.0.1
+  #shared_preferences: ^2.0.5
   custom_navigation_bar: ^0.8.1
   # multi_image_picker2: ^5.0.0
   flutter_slidable: ^0.6.0
-  path_provider: ^2.0.2
+  #path_provider: ^2.0.2
   material_dialogs: ^1.0.0
   intl: ^0.17.0
   flutter_downloader: ^1.6.1
@@ -72,8 +72,8 @@ dependencies:
   #agora video call
   agora_rtc_engine: ^4.0.0
   #permission handler
-  permission_handler: ^6.0.1
-  video_player: ^2.1.14
+  #permission_handler: ^6.0.1
+  #video_player: ^2.1.14
   #SVG Package
   flutter_svg: ^0.22.0
   #status bar color
@@ -81,7 +81,7 @@ dependencies:
   #GIF Packages
   giphy_get: ^2.0.2
   #google sign in
-  google_sign_in: ^5.0.5
+  #google_sign_in: ^5.0.5
 
   #SQL for local Storage
   hive: ^2.0.4
@@ -91,11 +91,11 @@ dependencies:
   flappy_search_bar_ns: ^2.0.2
 
   #firebase packages
-  firebase_core: ^1.2.0
+  #firebase_core: ^1.2.0
   firebase_analytics: ^8.1.0
-  firebase_auth: ^1.2.0
-  cloud_firestore: ^2.2.0
-  firebase_storage: ^8.1.0
+  #firebase_auth: ^1.2.0
+  #cloud_firestore: ^2.2.0
+  #firebase_storage: ^8.1.0
   flutter_launcher_icons: "^0.9.1"
   #Just added packages   --END--
 
