--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,39 +7,40 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  chewie: ^1.2.2
-  cloud_firestore: ^2.4.0
-  cupertino_icons: ^1.0.2
-  firebase_auth: ^3.0.1
-  firebase_core: ^1.4.0
-  firebase_storage: ^10.0.1
+  chewie: ^1.3.4
+  cloud_firestore: ^3.4.0
+  cupertino_icons: ^1.0.5
+  firebase_auth: ^3.5.0
+  firebase_core: ^1.20.0
+  firebase_storage: ^10.3.3
   flutter:
     sdk: flutter
   flutter_facebook_login: ^3.0.0
-  flutter_inappwebview: ^5.3.2
-  flutter_rating_bar: ^1.1.0
-  flutter_spinkit: ^4.1.2+1
-  fluttertoast: ^8.0.8
-  google_sign_in: ^5.0.7
-  image_picker: ^0.8.2
-  modal_progress_hud: ^0.1.3
-  path_provider: ^2.0.2
-  permission_handler: ^9.2.0
+  flutter_inappwebview: ^5.4.3+7
+  flutter_rating_bar: ^4.0.1
+  flutter_spinkit: ^5.1.0
+  fluttertoast: ^8.0.9
+  google_sign_in: ^5.4.0
+  image_picker: ^0.8.5+3
+  #modal_progress_hud: ^0.1.3
+  modal_progress_hud_alt: ^1.0.0
+  path_provider: ^2.0.11
+  permission_handler: ^10.0.0
   provider: ^6.0.3
-  shared_preferences: ^2.0.6
-  table_calendar: ^2.1.0
-  url_launcher: ^6.0.9
-  video_player: ^2.1.14
-  webview_flutter: ^2.0.9
-  cached_network_image: ^3.2.0
-  badges: ^2.0.2
-  timeago: ^3.1.0
-  carousel_slider: ^4.0.0
+  shared_preferences: ^2.0.15
+  table_calendar: ^3.0.6
+  url_launcher: ^6.1.5
+  video_player: ^2.4.5
+  webview_flutter: ^3.0.4
+  cached_network_image: ^3.2.1
+  badges: ^2.0.3
+  timeago: ^3.2.2
+  carousel_slider: ^4.1.1
   open_file: ^3.2.1
   flowder: ^0.2.0
   #percent_indicator: ^4.2.1
-  percent_indicator: ^3.4.0
-  font_awesome_flutter: ^9.2.0
+  percent_indicator: ^4.2.2
+  font_awesome_flutter: ^10.1.0
 
 
 
@@ -49,54 +50,54 @@ dependencies:
   #provider: ^5.0.0
   #cupertino_icons: ^1.0.2
   #font_awesome_flutter: ^9.0.0
-  google_fonts: ^2.0.0
-  rxdart: ^0.26.0
-  another_flushbar: ^1.10.20
+  google_fonts: ^3.0.1
+  rxdart: ^0.27.5
+  another_flushbar: ^1.10.29
   #cached_network_image: ^3.0.0
   connectivity: ^3.0.6
   #image_picker: ^0.7.5+2
-  page_transition: ^2.0.2
+  page_transition: ^2.0.9
   #timeago: ^3.0.2
-  file_picker: ^4.0.0
+  file_picker: ^4.6.1
   #percent_indicator: ^3.0.1
   #shared_preferences: ^2.0.5
-  custom_navigation_bar: ^0.8.1
+  custom_navigation_bar: ^0.8.2
   # multi_image_picker2: ^5.0.0
-  flutter_slidable: ^0.6.0
+  flutter_slidable: ^2.0.0
   #path_provider: ^2.0.2
-  material_dialogs: ^1.0.0
+  material_dialogs: ^1.1.3
   intl: ^0.17.0
-  flutter_downloader: ^1.6.1
-  photo_view: ^0.12.0
-  emoji_picker_flutter: ^1.0.6
+  flutter_downloader: ^1.8.1
+  photo_view: ^0.14.0
+  emoji_picker_flutter: ^1.3.0
   #agora video call
-  agora_rtc_engine: ^5.2.0
+  agora_rtc_engine: ^5.3.0
   #permission handler
   #permission_handler: ^6.0.1
   #video_player: ^2.1.14
   #SVG Package
-  flutter_svg: ^0.22.0
+  flutter_svg: ^1.1.1+1
   #status bar color
-  flutter_statusbarcolor_ns: ^0.3.0-nullsafety
+  flutter_statusbarcolor_ns: ^0.4.0
   #GIF Packages
-  giphy_get: ^2.0.2
+  giphy_get: ^2.0.4
   #google sign in
   #google_sign_in: ^5.0.5
 
   #SQL for local Storage
-  hive: ^2.0.4
-  sqflite: ^2.0.0+3
+  hive: ^2.2.3
+  sqflite: ^2.0.3
 
   #Search Bar packages
   flappy_search_bar_ns: ^2.0.2
 
   #firebase packages
   #firebase_core: ^1.2.0
-  firebase_analytics: ^8.1.0
+  firebase_analytics: ^9.2.1
   #firebase_auth: ^1.2.0
   #cloud_firestore: ^2.2.0
   #firebase_storage: ^8.1.0
-  flutter_launcher_icons: "^0.9.1"
+  flutter_launcher_icons: ^0.9.3
   #Just added packages   --END--
 
 
@@ -105,7 +106,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.9.2
   flutter_test:
     sdk: flutter
-  build_runner: ^2.0.0
+  build_runner: ^2.2.0
   json_serializable: ^6.3.1
 
 
